--- a/MoonTimeApp/MoonTimeApp.csproj
+++ b/MoonTimeApp/MoonTimeApp.csproj
@@ -50,92 +50,88 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Calc.cs" />
-    <Compile Include="TheResults.cs" />
     <Compile Include="Model.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
-    <None Include="Resources\drawable\drawable-hdpi\blank.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\firstquarter90setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\fullmoon180setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\ic_launcher.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\newmoon0setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\second.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\thirdquarter90setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanningcrest45setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\wanninggibbous135setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxingcrest45setting.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135highsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135ineast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135inwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135loweast.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135lowsky.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135lowwest.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135rising.png" />
-    <None Include="Resources\drawable\drawable-hdpi\waxinggibbous135setting.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\Raw\android.m4v" />
     <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\layout\App.axml" />
-    <AndroidResource Include="Resources\layout\FinalResults.axml" />
     <AndroidResource Include="Resources\drawable\Icon.png" />
+    <AndroidResource Include="Resources\drawable\ic_launcher.png" />
+    <AndroidResource Include="Resources\drawable\blank.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90highsky.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90ineast.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90inwest.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90loweast.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90lowsky.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90lowwest.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90rising.png" />
+    <AndroidResource Include="Resources\drawable\firstquarter90setting.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180highsky.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180ineast.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180inwest.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180loweast.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180lowsky.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180lowwest.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180rising.png" />
+    <AndroidResource Include="Resources\drawable\fullmoon180setting.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0highsky.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0ineast.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0inwest.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0loweast.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0lowsky.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0lowwest.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0rising.png" />
+    <AndroidResource Include="Resources\drawable\newmoon0setting.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90highsky.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90ineast.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90inwest.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90loweast.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90lowsky.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90lowwest.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90rising.png" />
+    <AndroidResource Include="Resources\drawable\thirdquarter90setting.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45highsky.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45ineast.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45inwest.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45loweast.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45lowsky.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45lowwest.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45rising.png" />
+    <AndroidResource Include="Resources\drawable\wanningcrest45setting.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135highsky.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135ineast.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135inwest.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135loweast.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135lowsky.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135lowwest.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135rising.png" />
+    <AndroidResource Include="Resources\drawable\wanninggibbous135setting.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45highsky.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45ineast.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45inwest.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45loweast.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45lowsky.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45lowwest.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45rising.png" />
+    <AndroidResource Include="Resources\drawable\waxingcrest45setting.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135highsky.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135ineast.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135inwest.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135loweast.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135lowsky.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135lowwest.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135rising.png" />
+    <AndroidResource Include="Resources\drawable\waxinggibbous135setting.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Resources\Raw\" />
-    <Folder Include="Resources\drawable\drawable-hdpi\" />
   </ItemGroup>
 </Project>
